# specula-studio

./: LICENSE  constants.py  data_plotter.py  dpg_plotting.py  dpg_utils.py  file_handler.py  graph_manager.py  inprocess_monitor.py  main.py  matplotlib_dpg_bridge.py  monitor_bus.py  monitor_manager.py  monitor_window.py  node_manager.py  node_registry.py  override_manager.py  parse_classes.py  property_panel.py  pyproject.toml  render_scale.py  requirements.txt  simulation_backend.py  simulation_control.py  socketio_client.py
specula_yaml_docs/: all_templates_merged.yml
specula_yaml_docs/data_objects/: BaseValue.yml  ConvolutionKernel.yml  ElectricField.yml  GaussianConvolutionKernel.yml  IFunc.yml  IFuncInv.yml  IirFilterData.yml  InfinitePhaseScreen.yml  Intensity.yml  Intmat.yml  LaserLaunchTelescope.yml  Layer.yml  Lenslet.yml  M2C.yml  Pixels.yml  PupData.yml  Pupilstop.yml  Recmat.yml  SimulParams.yml  Slopes.yml  Source.yml  SpatioTempArray.yml  SsrFilterData.yml  SubapData.yml  TimeHistory.yml
specula_yaml_docs/other/: APPCoronagraph.yml  APPCoronograph.yml  AtmoEvolutionUpDown.yml  AtmoInfiniteEvolutionUpDown.yml  BaseDataObj.yml  BaseMask.yml  BaseProcessingObj.yml  BaseTimeObj.yml  DistributedSH.yml  DoublePhaseDisplay.yml  DoubleRoofSlopec.yml  ExtSourcePyramid.yml  FocalPlaneFilter.yml  FourQuadrantCoronagraph.yml  FourQuadrantCoronograph.yml  IirFilter.yml  Integrator.yml  LowPassFilter.yml  LyotCoronagraph.yml  LyotCoronograph.yml  ModalrecImplicitPolc.yml  ModesDisplay.yml  ModulatedDoubleRoof.yml  PAPLCoronagraph.yml  PAPLCoronograph.yml  PhaseDisplay.yml  PixelsDisplay.yml  PlotDisplay.yml  PlotVectorDisplay.yml  PolyChromSH.yml  PolyCromPyramid.yml  PsfCoronagraph.yml  PsfDisplay.yml  PyrSlopec.yml  ShSlopec.yml  (+5 more)
utils/: compare_yamls.py  parse_classes.py
(+100 files in other folders)
